test/classes/initializers/paramInHeader1.good
paramInHeader1.chpl:4: In initializer:
paramInHeader1.chpl:4: error: invalid access of class member in initializer argument list
